// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpeakIndex — the warm door > frozen-shell snapshots (SPR-01 M2) > matches the public-empty snapshot 1`] = `
<div>
  <div
    class="h-full overflow-y-auto bg-ice-0 dark:bg-charcoal-2"
  >
    <div
      class="mx-auto max-w-2xl px-6 py-10"
    >
      <header
        class="mb-7 space-y-3"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            data-testid="speak-home-werner-brand"
          >
            <span
              aria-label="Speak"
              class="inline-block align-middle"
              role="img"
              style="width: 44px; height: 44px;"
            >
              <img
                alt=""
                aria-hidden="true"
                class=""
                draggable="false"
                height="44"
                src="/src/brand/werner/poses/session/werner_thinking_session_v1.png"
                style="display: block; width: 44px; height: 44px; object-fit: contain;"
                width="44"
              />
            </span>
          </span>
          <div>
            <h1
              class="font-serif text-2xl font-semibold text-ink dark:text-bright"
            >
              Who do you want to remember?
            </h1>
            <p
              class="mt-1 text-sm text-ink-soft dark:text-moonlight"
            >
              Name someone, then invite the people who knew them. Each records their memories — in their own voice, on their own time — and their story comes together from what everyone shares.
            </p>
          </div>
        </div>
        <img
          alt=""
          aria-hidden="true"
          class="h-16 w-full max-w-md rounded-md object-cover object-center"
          data-testid="speak-home-living-tv-art"
          decoding="async"
          loading="lazy"
          src="/src/brand/werner/poses/session/werner_living_tv_session_v1.webp"
        />
      </header>
      <form
        class="mb-8 flex flex-wrap items-center gap-2 rounded-md border-2 border-ink bg-ice-0 p-3 shadow-z1 dark:border-charcoal-1 dark:bg-charcoal-1 dark:shadow-z1-night"
      >
        <input
          aria-label="Who do you want to remember?"
          class="min-w-[220px] flex-1 rounded border border-rule bg-transparent px-3 py-2 font-serif text-[15px] text-ink focus:outline-none focus:ring-2 focus:ring-sun dark:border-charcoal-1 dark:text-bright"
          placeholder="A name — e.g. my grandmother, Dad, Maria"
          value=""
        />
        <button
          class="inline-flex items-center justify-center gap-2 font-mono font-semibold border-edge rounded-hog disabled:opacity-50 disabled:pointer-events-none bg-sun text-ink border-sun shadow-z1 dark:shadow-z1-night transition-transform duration-base ease-standard hover:-translate-x-[2px] hover:-translate-y-[2px] hover:shadow-z3 dark:hover:shadow-z3-night active:translate-x-[2px] active:translate-y-[2px] active:!shadow-none h-9  px-3.5 text-[13px]  "
          disabled=""
          type="submit"
        >
          Start their story
        </button>
      </form>
      <div
        class="mb-4 flex gap-1 border-b border-rule dark:border-charcoal-1"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="-mb-px border-b-2 px-3 py-2 font-mono text-[11px] uppercase tracking-wider border-transparent text-ink-mute hover:text-ink dark:text-moonlight dark:hover:text-bright"
          role="tab"
          type="button"
        >
          People you're remembering
        </button>
        <button
          aria-selected="true"
          class="-mb-px border-b-2 px-3 py-2 font-mono text-[11px] uppercase tracking-wider border-sun text-ink dark:text-bright"
          role="tab"
          type="button"
        >
          Public remembrances
        </button>
      </div>
      <section
        class="space-y-4"
      >
        <div>
          <label
            class="inline-flex items-center gap-2 px-3 bg-ice-0 dark:bg-charcoal-2 border-edge border-sun rounded-hog transition-shadow shadow-none focus-within:shadow-z1 dark:focus-within:shadow-z1-night h-9 w-full"
          >
            <input
              aria-label="Search public remembrances"
              class="flex-1 bg-transparent outline-none font-sans text-[13px] text-ink dark:text-bright placeholder:text-ink-mute dark:placeholder:text-moonlight "
              placeholder="Search public remembrances by name…"
              type="search"
              value=""
            />
          </label>
        </div>
        <p
          class="font-serif text-sm italic text-ink-mute dark:text-moonlight"
        >
          No public remembrances yet. When someone shares a story publicly, it'll appear here — and you'll be able to add what you remember.
        </p>
        <div
          aria-label="Open public contributions"
          class="rounded-md border-2 border-ink bg-ice-0 p-4 shadow-z1 dark:border-charcoal-1 dark:bg-charcoal-1 dark:shadow-z1-night"
          role="note"
        >
          <h3
            class="font-serif text-[15px] font-semibold text-ink dark:text-bright"
          >
            Open public contributions
          </h3>
          <p
            class="mt-1 font-serif text-[13px] text-ink-mute dark:text-moonlight"
          >
            Open public contributions arrive after the ecosystem review (G7); for now, contributions come through your invites.
          </p>
        </div>
        <div
          class="rounded-md border-2 border-ink bg-ice-0 p-4 shadow-z1 dark:border-charcoal-1 dark:bg-charcoal-1 dark:shadow-z1-night"
        >
          <h3
            class="font-serif text-[15px] font-semibold text-ink dark:text-bright"
          >
            How public remembrances will work
          </h3>
          <ol
            class="mt-2 space-y-2"
          >
            <li
              class="font-serif text-[13px] text-ink dark:text-bright"
            >
              Anyone will be able to find an open remembrance and add what they remember.
            </li>
            <li
              class="font-serif text-[13px] text-ink dark:text-bright"
            >
              Open contribution by anyone arrives after the ecosystem review — see the note above; for now, contributions come through your invites.
            </li>
            <li
              class="font-serif text-[13px] text-ink dark:text-bright"
            >
              Public sharing opens after a legal review (G2/G3). Until then a remembrance stays private to you and the people you invite.
            </li>
            <li
              class="font-serif text-[13px] text-ink dark:text-bright"
            >
              Contributor shares accrue to escrow now; money begins routing once the legal review clears (G2/G3).
            </li>
          </ol>
          <p
            class="mt-2 font-serif text-[12px] italic text-ink-mute dark:text-moonlight"
          >
            A contribution's share is weighted by how well-corroborated and well-sourced it is — by the quality of what's remembered, nothing else.
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`SpeakIndex — the warm door > frozen-shell snapshots (SPR-01 M2) > matches the yours-empty snapshot 1`] = `
<div>
  <div
    class="h-full overflow-y-auto bg-ice-0 dark:bg-charcoal-2"
  >
    <div
      class="mx-auto max-w-2xl px-6 py-10"
    >
      <header
        class="mb-7 space-y-3"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            data-testid="speak-home-werner-brand"
          >
            <span
              aria-label="Speak"
              class="inline-block align-middle"
              role="img"
              style="width: 44px; height: 44px;"
            >
              <img
                alt=""
                aria-hidden="true"
                class=""
                draggable="false"
                height="44"
                src="/src/brand/werner/poses/session/werner_thinking_session_v1.png"
                style="display: block; width: 44px; height: 44px; object-fit: contain;"
                width="44"
              />
            </span>
          </span>
          <div>
            <h1
              class="font-serif text-2xl font-semibold text-ink dark:text-bright"
            >
              Who do you want to remember?
            </h1>
            <p
              class="mt-1 text-sm text-ink-soft dark:text-moonlight"
            >
              Name someone, then invite the people who knew them. Each records their memories — in their own voice, on their own time — and their story comes together from what everyone shares.
            </p>
          </div>
        </div>
        <img
          alt=""
          aria-hidden="true"
          class="h-16 w-full max-w-md rounded-md object-cover object-center"
          data-testid="speak-home-living-tv-art"
          decoding="async"
          loading="lazy"
          src="/src/brand/werner/poses/session/werner_living_tv_session_v1.webp"
        />
      </header>
      <form
        class="mb-8 flex flex-wrap items-center gap-2 rounded-md border-2 border-ink bg-ice-0 p-3 shadow-z1 dark:border-charcoal-1 dark:bg-charcoal-1 dark:shadow-z1-night"
      >
        <input
          aria-label="Who do you want to remember?"
          class="min-w-[220px] flex-1 rounded border border-rule bg-transparent px-3 py-2 font-serif text-[15px] text-ink focus:outline-none focus:ring-2 focus:ring-sun dark:border-charcoal-1 dark:text-bright"
          placeholder="A name — e.g. my grandmother, Dad, Maria"
          value=""
        />
        <button
          class="inline-flex items-center justify-center gap-2 font-mono font-semibold border-edge rounded-hog disabled:opacity-50 disabled:pointer-events-none bg-sun text-ink border-sun shadow-z1 dark:shadow-z1-night transition-transform duration-base ease-standard hover:-translate-x-[2px] hover:-translate-y-[2px] hover:shadow-z3 dark:hover:shadow-z3-night active:translate-x-[2px] active:translate-y-[2px] active:!shadow-none h-9  px-3.5 text-[13px]  "
          disabled=""
          type="submit"
        >
          Start their story
        </button>
      </form>
      <div
        class="mb-4 flex gap-1 border-b border-rule dark:border-charcoal-1"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="-mb-px border-b-2 px-3 py-2 font-mono text-[11px] uppercase tracking-wider border-sun text-ink dark:text-bright"
          role="tab"
          type="button"
        >
          People you're remembering
        </button>
        <button
          aria-selected="false"
          class="-mb-px border-b-2 px-3 py-2 font-mono text-[11px] uppercase tracking-wider border-transparent text-ink-mute hover:text-ink dark:text-moonlight dark:hover:text-bright"
          role="tab"
          type="button"
        >
          Public remembrances
        </button>
      </div>
      <p
        class="font-serif text-sm italic text-ink-mute dark:text-moonlight"
      >
        No one yet — name the first person above.
      </p>
    </div>
  </div>
</div>
`;

exports[`SpeakIndex — the warm door > frozen-shell snapshots (SPR-01 M2) > matches the yours-populated snapshot 1`] = `
<div>
  <div
    class="h-full overflow-y-auto bg-ice-0 dark:bg-charcoal-2"
  >
    <div
      class="mx-auto max-w-2xl px-6 py-10"
    >
      <header
        class="mb-7 space-y-3"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            data-testid="speak-home-werner-brand"
          >
            <span
              aria-label="Speak"
              class="inline-block align-middle"
              role="img"
              style="width: 44px; height: 44px;"
            >
              <img
                alt=""
                aria-hidden="true"
                class=""
                draggable="false"
                height="44"
                src="/src/brand/werner/poses/session/werner_thinking_session_v1.png"
                style="display: block; width: 44px; height: 44px; object-fit: contain;"
                width="44"
              />
            </span>
          </span>
          <div>
            <h1
              class="font-serif text-2xl font-semibold text-ink dark:text-bright"
            >
              Who do you want to remember?
            </h1>
            <p
              class="mt-1 text-sm text-ink-soft dark:text-moonlight"
            >
              Name someone, then invite the people who knew them. Each records their memories — in their own voice, on their own time — and their story comes together from what everyone shares.
            </p>
          </div>
        </div>
        <img
          alt=""
          aria-hidden="true"
          class="h-16 w-full max-w-md rounded-md object-cover object-center"
          data-testid="speak-home-living-tv-art"
          decoding="async"
          loading="lazy"
          src="/src/brand/werner/poses/session/werner_living_tv_session_v1.webp"
        />
      </header>
      <form
        class="mb-8 flex flex-wrap items-center gap-2 rounded-md border-2 border-ink bg-ice-0 p-3 shadow-z1 dark:border-charcoal-1 dark:bg-charcoal-1 dark:shadow-z1-night"
      >
        <input
          aria-label="Who do you want to remember?"
          class="min-w-[220px] flex-1 rounded border border-rule bg-transparent px-3 py-2 font-serif text-[15px] text-ink focus:outline-none focus:ring-2 focus:ring-sun dark:border-charcoal-1 dark:text-bright"
          placeholder="A name — e.g. my grandmother, Dad, Maria"
          value=""
        />
        <button
          class="inline-flex items-center justify-center gap-2 font-mono font-semibold border-edge rounded-hog disabled:opacity-50 disabled:pointer-events-none bg-sun text-ink border-sun shadow-z1 dark:shadow-z1-night transition-transform duration-base ease-standard hover:-translate-x-[2px] hover:-translate-y-[2px] hover:shadow-z3 dark:hover:shadow-z3-night active:translate-x-[2px] active:translate-y-[2px] active:!shadow-none h-9  px-3.5 text-[13px]  "
          disabled=""
          type="submit"
        >
          Start their story
        </button>
      </form>
      <div
        class="mb-4 flex gap-1 border-b border-rule dark:border-charcoal-1"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="-mb-px border-b-2 px-3 py-2 font-mono text-[11px] uppercase tracking-wider border-sun text-ink dark:text-bright"
          role="tab"
          type="button"
        >
          People you're remembering
        </button>
        <button
          aria-selected="false"
          class="-mb-px border-b-2 px-3 py-2 font-mono text-[11px] uppercase tracking-wider border-transparent text-ink-mute hover:text-ink dark:text-moonlight dark:hover:text-bright"
          role="tab"
          type="button"
        >
          Public remembrances
        </button>
      </div>
      <section>
        <ul
          class="space-y-2"
        >
          <li>
            <a
              class="block rounded-md border-2 border-ink bg-ice-0 p-3 shadow-z1 transition-transform hover:-translate-x-0.5 hover:-translate-y-0.5 dark:border-charcoal-1 dark:bg-charcoal-1 dark:shadow-z1-night"
              href="/speak/y1"
            >
              <div
                class="flex items-center justify-between gap-3"
              >
                <span
                  class="font-serif text-[16px] text-ink dark:text-bright"
                >
                  Grandma Rosa
                </span>
                <span
                  class="shrink-0 font-mono text-[10px] text-ink-mute dark:text-moonlight"
                >
                  no voices yet
                </span>
              </div>
              <p
                class="mt-0.5 font-serif text-[12px] text-ink-mute dark:text-moonlight"
              >
                Kept private
              </p>
            </a>
          </li>
          <li>
            <a
              class="block rounded-md border-2 border-ink bg-ice-0 p-3 shadow-z1 transition-transform hover:-translate-x-0.5 hover:-translate-y-0.5 dark:border-charcoal-1 dark:bg-charcoal-1 dark:shadow-z1-night"
              href="/speak/y2"
            >
              <div
                class="flex items-center justify-between gap-3"
              >
                <span
                  class="font-serif text-[16px] text-ink dark:text-bright"
                >
                  Dad
                </span>
                <span
                  class="shrink-0 font-mono text-[10px] text-ink-mute dark:text-moonlight"
                >
                  2 voices
                </span>
              </div>
              <p
                class="mt-0.5 font-serif text-[12px] text-ink-mute dark:text-moonlight"
              >
                Will be shared publicly
              </p>
              <p
                class="mt-1 font-serif text-[12px] italic text-ink-soft dark:text-moonlight"
              >
                Their story is coming together — 2 voices have added a memory.
              </p>
            </a>
          </li>
        </ul>
      </section>
    </div>
  </div>
</div>
`;
